# QTDCMSERIES

./: CMakeLists.txt  TagDialog.cpp  TagDialog.h  TagDialog.ui  Test.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
